- Fixed visibility detection and used it to improve page recovery (especially on modern mobile platforms) - Added throttling of getLatest calls so only one is pending per list(-Controller) - Added feedback mechanism for easier debugging on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,8 @@ button.button {
 .waiting-for-angular {
   display:none;
 }
+
+.feedback {
+  color: slategray;
+  font-size: .7em;
+}
